# VK-RAG-Implementation

./: .env.example  .gitignore  1.0_RAG_With_Own_Text.ipynb  Pyspark_RAG.ipynb  PythonApplication1.pyproj  main.py  pyproject.toml  requirements.txt
Vector/5cde9c81-c317-474b-9bae-fcb652d772c0/: index_metadata.pickle
